--- a/src/app/introduce/introduce.component.html
+++ b/src/app/introduce/introduce.component.html
@@ -15,9 +15,9 @@
     <div class="contact" id="about">
         <div class="contact_images">
             <img class="line" src="/assets/img/line.png" alt="">
-            <img src="/assets/img/git.png" alt="">
-            <img src="/assets/img/Email button.png" alt="">
-            <img src="/assets/img/Linkedin button.png" alt="">
+            <a target="_blank" href="https://github.com/SilvioSchriefl"><img src="/assets/img/git.png" alt=""></a>
+            <a href="#contact"> <img src="/assets/img/Email button.png" alt=""></a>
+            <a target="_blank" href="https://www.linkedin.com/in/silvio-schriefl-31855427a/"><img src="/assets/img/Linkedin button.png" alt=""></a>
         </div>
         <a href="#contact">info@silvio-schriefl.de</a>
     </div>
