--- a/src/app/introduce/introduce.component.sass
+++ b/src/app/introduce/introduce.component.sass
@@ -65,6 +65,7 @@
         transition: 200ms
         &:hover
             transform: scale(1.3)
+            cursor: pointer
 
 .button_talk
     z-index: 10
